
[build-system]
requires = [
    "setuptools",
    "uv",
]
backend-path = [
    "build-backend",
    "",
]
build-backend = "pex_build.setuptools.build"

[tool.pex.build_backend]
delegate-build-backend = "setuptools.build_meta"
plugins = [
    "pex_build",
]

[[tool.pex.build_backend.script-locks]]
command = [
    "uv",
    "export",
    "--frozen",
    "--format",
    "pylock.toml",
    "--no-header",
    "--no-emit-project",
    "--all-extras",
    "--no-dev",
    "-q",
    "-o",
    "{lock_path}",
]

[tool.pex_build.setuptools.build.project]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
when = "python_version >= '3.9'"

[tool.uv]
constraint-dependencies = [
    "setuptools<82",
]
override-dependencies = [
    "tomli==2.2.1; python_version >= '3.8'",
]

[[tool.uv.cache-keys]]
file = "pex/docs/html/index.html"

[[tool.uv.cache-keys]]
file = "pex/windows/stubs/*.exe"

[tool.black]
line-length = 100
target-version = [
    "py27",
]
exclude = "/pex/(\n  vendor/_vendored/\n  |venv/virtualenv_16\\.7\\.12_py\n)\n"

[tool.isort]
profile = "black"
line_length = 100
skip = []
skip_glob = [
    "pex/vendor/_vendored/**",
    "pex/venv/virtualenv_16.7.12_py",
]

[tool.dev-cmd]
default = "checks"
exit-style = "immediate"

[tool.dev-cmd.commands.build-cache-image]
description = "Build the CI cache data image."
when = "python_version >= '3.9'"
args = [
    "scripts/build-cache-image.py",
]
accepts-extra-args = true
dependency-group = "build-cache-image"
hidden = true

[tool.dev-cmd.commands.check-git-clean]
args = [
    "git",
    "diff",
    "--exit-code",
]
hidden = true

[tool.dev-cmd.commands.docs]
description = "Generate the Pex documentation static site and optionally serve it up."
when = "python_version >= '3.9'"
args = [
    "scripts/build-docs.py",
]
dependency-group = "docs"
accepts-extra-args = true

[tool.dev-cmd.commands.embed-virtualenv]
when = "python_version >= '3.9'"
args = [
    "scripts/embed-virtualenv.py",
]
hidden = true

[tool.dev-cmd.commands.embed-virtualenv.env]
PYTHONPATH = "."

[tool.dev-cmd.commands.enum-check]
python = "python2.7"
args = [
    "scripts/py27/lint_enum.py",
]
accepts-extra-args = true
hidden = true

[tool.dev-cmd.commands.format]
description = "Auto-format the source code."
python = "python3.11"
args = [
    "scripts/format.py",
]

[tool.dev-cmd.commands.format-check]
python = "python3.11"
args = [
    "scripts/format.py",
    "--check",
]
hidden = true

[tool.dev-cmd.commands.gen-scie-platform]
when = "python_version >= '3.9'"
args = [
    "scripts/gen-scie-platform.py",
]
accepts-extra-args = true
dependency-group = "gen-scie-platform"
hidden = true

[tool.dev-cmd.commands.gen-scie-platform.env]
PYTHONPATH = "."
PIP_EXTRA_INDEX_URL = "https://www.piwheels.org/simple https://gitlab.com/api/v4/projects/riseproject%2Fpython%2Fwheel_builder/packages/pypi/simple "

[tool.dev-cmd.commands.lint]
python = "python3.11"
description = "Currently removes unused imports and code."
when = "python_version >= '3.9'"
args = [
    "scripts/lint.py",
]

[tool.dev-cmd.commands.lint-check]
python = "python3.11"
when = "python_version >= '3.9'"
args = [
    "scripts/lint.py",
    "--check",
]
hidden = true

[tool.dev-cmd.commands.package]
description = "Package the Pex PEX, sdist, wheel and PEX scies."
when = "python_version >= '3.9'"
args = [
    "scripts/create-packages.py",
]
accepts-extra-args = true

[tool.dev-cmd.commands.package.env]
PYTHONPATH = "."

[tool.dev-cmd.commands.requires-python-check]
args = [
    "scripts/requires-python-check.py",
]
hidden = true

[tool.dev-cmd.commands.test-lt39]
description = "Run tests using pytest.\n\nFor example:\n+ test: Run unit tests under the ambient Python interpreter.\n+ test-py37: Run unit tests under Python 3.7 (A Python 3.7 must be somewhere on the `PATH`).\n+ test-integration: Run integration tests under the ambient Python interpreter\n+ test-py37-integration-pip22.3.1: Run integration tests under Python 3.7 using Pip 22.3.1.\n\nThe factors mix and match and are useful for parallel run of many setups; e.g.:\n$ dev-cmd --parallel test-py3{9..13} -- -k test_compiler\n"
when = "python_version < '3.9'"
python = "{-py:}"
name = "test"
args = [
    "testing/bin/run_tests.py",
    {discard_empty = "{-integration?--it:}"},
    "--jobs",
    "{-n:auto}",
    "--shard",
    "{-shard:1/1}",
]
accepts-extra-args = true
dependency-group = "test"

[tool.dev-cmd.commands.test-lt39.factors]
py = "The Python version to run the tests under."
pip = "The Pip version to default to in test runs."
integration = "Run the integration tests (also available via `--it` pass through arg)."
shard = "Shard tests.\n\nValues take the form M/N where M is the shard to pick of N total shards.\nM numbering is 1-based.\n\nFor example:\n+ `-shard:1/3` means to shard three ways and pick the 1st shard.\n+ `-shard:2/3` picks the 2nd shard.\n+ `-shard:3/3 the third.\n"
n = "Use this many jobs to run tests.\n\nPick 0 to not use any jobs; just run in the current process; pick 1 or more for that many jobs and\nuse auto to auto-configure the number of jobs to match the number of cores.\n"

[tool.dev-cmd.commands.test-lt39.env]
PYTHONHASHSEED = "{--hashseed}"
PYTHONUNBUFFERED = "1"
_PEX_PIP_VERSION = "{-pip:}"

[tool.dev-cmd.commands.test-gte39-lt316]
description = "Run tests using pytest.\n\nFor example:\n+ test: Run unit tests under the ambient Python interpreter.\n+ test-py37: Run unit tests under Python 3.7 (A Python 3.7 must be somewhere on the `PATH`).\n+ test-integration: Run integration tests under the ambient Python interpreter\n+ test-py37-integration-pip22.3.1: Run integration tests under Python 3.7 using Pip 22.3.1.\n\nThe factors mix and match and are useful for parallel run of many setups; e.g.:\n$ dev-cmd --parallel test-py3{9..13} -- -k test_compiler\n"
when = "python_version >= '3.9' and python_version < '3.16'"
python = "{-py:}"
name = "test"
args = [
    "testing/bin/run_tests.py",
    {discard_empty = "{-integration?--it:}"},
    "--jobs",
    "{-n:auto}",
    "--shard",
    "{-shard:1/1}",
]
accepts-extra-args = true
dependency-group = "test"

[tool.dev-cmd.commands.test-gte39-lt316.factors]
py = "The Python version to run the tests under."
pip = "The Pip version to default to in test runs."
integration = "Run the integration tests (also available via `--it` pass through arg)."
shard = "Shard tests.\n\nValues take the form M/N where M is the shard to pick of N total shards.\nM numbering is 1-based.\n\nFor example:\n+ `-shard:1/3` means to shard three ways and pick the 1st shard.\n+ `-shard:2/3` picks the 2nd shard.\n+ `-shard:3/3 the third.\n"
n = "Use this many jobs to run tests.\n\nPick 0 to not use any jobs; just run in the current process; pick 1 or more for that many jobs and\nuse auto to auto-configure the number of jobs to match the number of cores.\n"

[tool.dev-cmd.commands.test-gte39-lt316.env]
PYTHONHASHSEED = "{--hashseed}"
_PEX_PIP_VERSION = "{-pip:}"

[tool.dev-cmd.commands.typecheck]
description = "Type check the source code with MyPy."
python = "python3.11"
args = [
    "scripts/typecheck.py",
]

[tool.dev-cmd.commands.vendorize]
python = "python3.9"
args = [
    "python",
    "-m",
    "pex.vendor",
]
accepts-extra-args = true
dependency-group = "vendor"
hidden = true

[tool.dev-cmd.commands.vendorize-check]
python = "python3.9"
args = [
    "python",
    "-m",
    "pex.vendor",
    "--no-update",
]
dependency-group = "vendor"
hidden = true

[tool.dev-cmd.tasks.checks]
description = "Run the standard suite of Pex checks, including unit tests.\n\nTo just run the non-test checks, use `-stest` to skip tests.\n"
steps = [
    "format",
    "lint",
    "enum-check",
    "requires-python-check",
    "typecheck",
    "test",
]

[tool.dev-cmd.tasks.vendor]
description = "Re-vendor Pex vendored dependencies."
steps = [
    "vendorize",
    "format",
]

[tool.dev-cmd.tasks.vendor-check]
steps = [
    "embed-virtualenv",
    "vendorize-check",
    "check-git-clean",
]
hidden = true

[[tool.dev-cmd.python]]
when = "python_version >= '3.7' and python_version < '3.16' and platform_machine != 'armv7l' and platform_machine != 'riscv64'"
pyproject-cache-keys = []
extra-cache-keys = [
    "uv.lock",
]
3rdparty-export-command = [
    "uv",
    "export",
    "-q",
    "--python",
    "{markers.python_version}",
    "--frozen",
    "--no-emit-project",
    "--no-emit-package",
    "attrs",
    "--only-group",
    "{dependency-group:dev}",
    "-o",
    "{requirements.txt}",
]
3rdparty-pip-install-opts = [
    "--no-deps",
]
extra-requirements = [
    "-e",
    ".",
    "attrs @ git+https://github.com/python-attrs/attrs@947bfb542104209a587280701d8cb389c813459d",
]

[[tool.dev-cmd.python]]
when = "python_version < '3.7' and platform_machine != 'armv7l' and platform_machine != 'riscv64'"
extra-requirements = [
    "attrs @ git+https://github.com/python-attrs/attrs@947bfb542104209a587280701d8cb389c813459d",
]
finalize-command = [
    "{venv-python}",
    "scripts/dev-cmd-fix-egg-link.py",
    "{venv-site-packages}",
]

[[tool.dev-cmd.python]]
when = "platform_machine == 'armv7l' or platform_machine == 'riscv64'"
3rdparty-export-command = [
    "uv",
    "export",
    "-q",
    "--python",
    "{markers.python_version}",
    "--frozen",
    "--no-emit-project",
    "--no-hashes",
    "--only-group",
    "{dependency-group:dev}",
    "-o",
    "{requirements.txt}",
]

[project]
name = "pex"
requires-python = ">=2.7,<3.16,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
dynamic = [
    "authors",
    "classifiers",
    "description",
    "entry-points",
    "keywords",
    "optional-dependencies",
    "readme",
    "scripts",
    "urls",
    "version",
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]

[dependency-groups]
build-cache-image = [
    {include-group = "dev-cmd"},
    "ansicolors",
    "coloredlogs; python_version >= '3.8'",
    "PyYAML; python_version >= '3.8'",
]
dev-cmd = [
    "dev-cmd[old-pythons]; python_version >= '3.8'",
]
devpi-server = [
    "devpi-server; python_version >= '3.8'",
]
docs = [
    {include-group = "dev-cmd"},
    "furo; python_version >= '3.8'",
    "httpx; python_version >= '3.8'",
    "myst-parser[linkify]; python_version >= '3.8'",
    "pydyf<0.11.0; python_version >= '3.8'",
    "sphinx; python_version >= '3.8'",
    "sphinx-simplepdf; python_version >= '3.8'",
]
fmt = [
    {include-group = "dev-cmd"},
    "black==21.12b0; python_full_version >= '3.6.2'",
    "click==8.0.1; python_version >= '3.6'",
    "isort==5.10.1; python_full_version >= '3.6.1'",
]
gen-scie-platform = [
    {include-group = "dev-cmd"},
    "PyGithub; python_version >= '3.8'",
    "cffi==1.17.1; python_version >= '3.8'",
    "cryptography==42.0.8; python_version >= '3.8'",
    "pynacl==1.5.0; python_version >= '3.8'",
    "httpx; python_version >= '3.8'",
]
lint = [
    {include-group = "dev-cmd"},
    "autoflake==1.7.8; python_version >= '3.8'",
    "pyflakes==2.4.0; python_version >= '3.8'",
]
mypy = [
    {include-group = "dev-cmd"},
    "ansicolors==1.1.8",
    "appdirs==1.4.4",
    "attrs @ git+https://github.com/python-attrs/attrs@947bfb542104209a587280701d8cb389c813459d",
    "MarkupSafe<3",
    "mypy[python2]==0.971; python_version >= '3.8' and python_version < '3.12'",
    "packaging==20.9; python_version < '3.12'",
    "packaging>=21; python_version >= '3.12'",
    "toml==0.10.2",
    "types-PyYAML==6.0.12.12; python_version >= '3.8'",
    "types-appdirs==1.4.3.5; python_version >= '3.8'",
    "types-docutils==0.20.0.20240310; python_version >= '3.8'",
    "types-mock==5.1.0.20240106; python_version >= '3.8'",
    "types-pexpect==4.9.0.20240207; python_version >= '3.8'",
    "types-python-dateutil==2.9.0.20241206; python_version >= '3.8'",
    "types-setuptools==69.1.0.20240302; python_version >= '3.8'",
    "types-toml==0.10.5; python_version >= '3.8'",
    {include-group = "build-cache-image"},
    {include-group = "devpi-server"},
    {include-group = "docs"},
    {include-group = "fmt"},
    {include-group = "gen-scie-platform"},
    {include-group = "package"},
    {include-group = "test"},
    {include-group = "vendor"},
]
package = [
    "build",
]
test = [
    {include-group = "dev-cmd"},
    "ansicolors",
    "coloredlogs",
    "mock; python_version == '2.7'",
    "more-itertools<=8.10.0; python_version < '3.6'",
    "pexpect",
    "psutil",
    "pytest",
    "pytest-md-report; python_version >= '3.9'",
    "pytest-retry; python_version >= '3.9'",
    "pytest-timeout",
    "pytest-xdist",
    "python-dateutil",
    "subprocess32",
]
vendor = [
    {include-group = "dev-cmd"},
    "ansicolors",
    "httpx; python_version >= '3.8'",
    "libcst; python_version >= '3.8'",
    "pip==24.0; python_version == '3.9'",
    "pip!=24.0; python_version >= '3.8' and python_version != '3.9'",
    "setuptools==50.3.2; python_version == '3.9'",
    "setuptools!=50.3.2; python_version >= '3.8' and python_version != '3.9'",
    "wheel==0.35.1; python_version == '3.9'",
    "wheel!=0.35.1; python_version >= '3.8' and python_version != '3.9'",
]

[[dependency-groups.dev]]
include-group = "dev-cmd"

[[dependency-groups.dev]]
include-group = "build-cache-image"

[[dependency-groups.dev]]
include-group = "devpi-server"

[[dependency-groups.dev]]
include-group = "docs"

[[dependency-groups.dev]]
include-group = "fmt"

[[dependency-groups.dev]]
include-group = "gen-scie-platform"

[[dependency-groups.dev]]
include-group = "lint"

[[dependency-groups.dev]]
include-group = "mypy"

[[dependency-groups.dev]]
include-group = "package"

[[dependency-groups.dev]]
include-group = "test"

[[dependency-groups.dev]]
include-group = "vendor"
